# clam

./: .gitignore  .gitmodules  README.md  api_snippet.txt  clam-readme.md  extract.py  ha_call_service.py  ha_service_helper.py  ha_subscribe_events.py  ha_subscribe_simple.py  list.html  load.html  multiprocess_pipe_example.py  notes-v1.md  notes-v2.md  notes-v3.md  one.py  parsing_brackets.py  test_grad.py  test_lmstudio_matches.py  wrappers.py
chat-class/: app.py  (+9 more)
func-pipes-2/py-simple-bridge/: README.md  pyproject.toml
func-pipes-2/py-simple-bridge/examples/: background_loop.py  basic_chain.py  custom_events.py  named_pips.py  no_default_named_pips.py
func-pipes-2/py-simple-bridge/src/py_simple_bridge.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
func-pipes-2/py-simple-bridge/src/simple_bridge/: __init__.py  bridge.py  events.py  nodes.py  types.py
func-pipes-2/py-simple-bridge/tests/: test_bridge_async.py  test_bridge_connections.py  test_bridge_events.py  test_bridge_queue.py
func-sockets/: README.md  pyproject.toml  relay.py  server.py
func-sockets/clients/: __init__.py  graph-socket.js  graph_socket.py
func-sockets/docs/: file-guide.md
func-sockets/examples/: browser.html  demo_graph.py  publisher.py
func-sockets/examples/spy/: app.js  graph-socket.js  index.html  run.py  style.css
func-sockets/func_sockets.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
func-sockets/src/func_sockets/: __init__.py  __main__.py  graph_socket.py  relay.py  server.py
func-sockets/src/func_sockets.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
func-sockets/tests/: test_relay.py  test_server.py
power_graph/: README.md  app.py  pyproject.toml  run.py
power_graph/docs/: client.html  version-2-execution-semantics.md  version-2.md
power_graph/docs/examples/: example_basic.py  run_spaceship.py
power_graph/examples/: example_basic.py
power_graph/src/: app.py
power_graph/src/power_graph/: __init__.py  edge_store.py  event_system.py  graph.py  loader.py  node_base.py  node_registry.py  runner.py  web_app.py  ws_server.py
power_graph/src/power_graph/nodes/: __init__.py  breaker.py  bulb.py  bus_bar.py  console.py  converter.py  decision.py  generator.py  heater.py  load.py  meter.py  series_battery.py
power_graph/static/css/: power_graph.css
power_graph/static/js/power_graph/: app.js  canvas.js
power_graph/templates/: index.html
power_graph/templates/power_graph/: detail.html  header.html  panels.html  sidebar.html
power_graph/templates/power_graph/nodes/: bulb.html  gen.html  heater.html  series-battery.html
power_graph/tests/: test_basics.py  test_enabled_guard.py  test_event_regressions.py  test_generator_heater_power_control.py  test_heater_thermal.py  test_load_noise_propagation.py  test_runner.py  test_save_layout_endpoint.py  test_spaceship.py  test_spaceship_gen3_restart.py  test_spaceship_repair.py  test_spaceship_startup_run.py  test_ws_broadcast_serialisation.py
v5_2/clam/: MANIFEST.in  build.sh  pyproject.toml  requirements.txt
v5_2/clam/src/clam/: backbone.py  bot_pipe.py  cli.py  client.py  config.py  defaults.config.py  grad_stt.py  grad_voice.py  orchestra_client.py  orchestra_post.py  prompt.py  sendmessage.py  services.py  terminal_chat.py  terminal_client.py  terminal_select.py  toolclient.py  tooler.py  tooler_bot.py  tooler_tests.py  tools.py  vibevoice_say.py  voice_proc.py
v5_2/clam/src/clam.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
v5_2/orchestra/: demo_post.bat  example.py  pyproject.toml  readme.md  run_orchestra_echo.bat  server.py
v5_2/orchestra/client/: server.py
v5_2/orchestra/example/: chat.py  echo.py  post.py  run_abs.bat
v5_2/orchestra/extras/: client.py  server.py  x_client.py  x_server.py
(+708 files in other folders)
