[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "power-graph"
version = "0.1.0"
description = "Event-driven electrical power distribution simulation engine"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["simulation", "power", "graph", "electrical", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev    = ["pytest", "pytest-asyncio"]
server = ["websockets>=12"]
all    = ["websockets>=12"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
