[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clam"
version = "2.0.3"
dynamic = ["dependencies"]

[project.scripts]
clam = "clam.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
clam = ["templates/**/*", "templates/*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

